[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Template for replit"
authors = ["Ben Saini"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pytest = "^6.2.5"
fastapi = "0.52.0"
pydantic = "1.3"
SQLAlchemy = "1.3.12"
starlette = "0.13.2"
urllib3 = "1.25.7"
uvicorn = "0.11.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"